tests/should_fail/fn_return_type_mismatch.nv
module main

// SHOULD FAIL: return type mismatch
fn getNumber() -> Int {
    return "hello"
}
getNumber()
